# ComfyUI-SongBloom

./: README.md  nodes.py  pyproject.toml  requirements.txt  requirements_chinese.txt
SongBloom/models/musicgen/conditioners/: text.py
SongBloom/models/songbloom/: songbloom_mvsa.py  songbloom_pl.py
